// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WYSIWYGRender /> should render correctly 1`] = `
<div
  className="myClass ql-editor"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div>Little test</div>",
    }
  }
/>
`;

exports[`<WYSIWYGRender /> should render correctly with tagName 1`] = `
<div
  className="myClass ql-editor"
>
  <i
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>Little test</div>",
      }
    }
  />
</div>
`;
